frontend/src/components/BookingTable.css
:root {
  --row-height: 4px;
  --column-width: 90px;
  --header-bg-color: #ebebeb;
  --number-of-cols: 10;

  --cell-bg-color: #f0f0f0;
  --cell-bg-color-alt: #e0e0e0;
}

.booking-grid {
  display: grid;
  width: 100%;
  overflow-x: auto;
  background: repeating-linear-gradient(45deg, var(--cell-bg-color), var(--cell-bg-color) 10px, var(--cell-bg-color-alt) 10px, var(--cell-bg-color-alt) 20px);
}

.header {
  background-color: var(--header-bg-color);
  border-right: 1px solid black;
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
  position: sticky !important;
  z-index: 20;
}

.subheader {
  background-color: var(--header-bg-color);
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
}

.subheader-sticky {
  position: sticky !important;
}

/* 
  COLOR OF SECTORISATION COLUMNS:
  background: rgb(167,255,200);
  background: linear-gradient(0deg, rgba(167,255,200,1) 0%, rgba(136,237,175,1) 100%);
*/

.booking {
  background: rgb(194, 212, 255);
  background: linear-gradient(45deg, rgba(194, 212, 255, 1) 0%, rgba(161, 189, 255, 1) 100%);
  border-top: 1px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto auto;
  justify-content: center;
  align-items: center;
  text-align: center;
  z-index: 1;
  position: relative;
}

.booking-hover {
  display: none !important;
  background-color: #003d9e;
  color: #fff;
  padding: 5px 10px !important;
  width: max-content;
  font-family: Arial, sans-serif;
  font-size: 14px;
  font-weight: bold;
  border-radius: 4px;
  position: absolute;
  top: 50%;
  left: calc(100% + 15px);
  transform: translateY(-50%);
}

.booking-hover::before {
  content: "";
  position: absolute;
  left: -6px;
  top: 50%;
  transform: translateY(-50%);
  border-width: 6px 6px 6px 0;
  border-style: solid;
  border-color: transparent #003d9e transparent transparent;
}

.booking:hover .booking-hover {
  display: inline-block !important;
}

.booking:hover {
  /* z index needed so the hover div will appear above other bookings */
  z-index: 2;
  background: linear-gradient(45deg, rgb(157, 185, 251) 0%, rgb(146, 178, 255) 100%);
}

.booking div {
  padding: 0px;
  margin: 0px;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.editable {
  cursor: pointer;
}

.small {
  font-size: 10px !important;
  grid-template-columns: auto auto !important;
  grid-template-rows: auto !important;
  gap: 10px !important;
  row-gap: 0px !important;
}

.training {
  background: rgb(255, 214, 214) !important;
  background: linear-gradient(0deg, rgba(255, 214, 214, 1) 0%, rgba(255, 184, 184, 1) 100%) !important;
}

.training:hover {
  background: linear-gradient(0deg, rgb(255, 175, 175) 0%, rgb(255, 142, 142) 100%) !important;
}

.sectorisation {
  background: rgb(190, 226, 190) !important;
  background: linear-gradient(0deg, rgb(197, 234, 197) 0%, rgb(159, 221, 159) 100%) !important;
}

.sectorisation:hover {
  background: rgb(175, 221, 175) !important;
  background: linear-gradient(0deg, rgb(182, 229, 182) 0%, rgb(148, 218, 148) 100%) !important;
  cursor: no-drop;
}

.empty-cell {
  position: relative;

  background: transparent;
  border-right: 1px solid #000;
  z-index: 0;
}

.doubleborder-1 {
  position: relative;
  border-right: 2px dashed #515151 !important;
}

.doubleborder-1:before {
  content: " ";
  position: absolute;
  z-index: -1;
  top: 0px;
  bottom: 0px;
  right: -1px;
  border-right: 1px solid #000;
}

.doubleborder-grid {
  position: relative;
}

.doubleborder-grid::before {
  content: "";
  position: absolute;
  z-index: -1;
  top: 0px;
  right: 0px;
  width: 1px;
  height: 4px;
  background-color: #000;
}
.doubleborder-grid::after {
  content: "";
  position: absolute;
  z-index: -1;
  top: 0px;
  right: -2px;
  width: 2px;
  height: 3px;
  background-color: #515151;
}

.doubleborder-2 {
  position: relative;
  border-right: 2px solid black;
}

.doubleborder-2:before {
  content: " ";
  position: absolute;
  z-index: -1;
  top: 0px;
  bottom: 0px;
  right: -1px;
  border-right: 1px solid #000;
}

.current-time-line {
  background-color: red;
  grid-column: 1 / -1;
  height: 1px;
  position: relative;
  z-index: 3;
}

.current-time-label {
  position: absolute;
  top: 2px;
  right: 0;
  background-color: rgb(215, 215, 215);
  color: red;
  padding: 2px 4px;
  font-size: 12px;
  z-index: 3;
}

